--- a/DumplingJump/DU/Resources/nibs/LockedEquipmentViewCell.xib
+++ b/DumplingJump/DU/Resources/nibs/LockedEquipmentViewCell.xib
@@ -87,7 +87,7 @@
 								<string key="NSFrame">{{84, 7}, {159, 30}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1022562948"/>
+								<reference key="NSNextKeyView" ref="459224144"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -166,7 +166,7 @@
 								<string key="NSFrame">{{1, -9}, {58, 67}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="459224144"/>
+								<reference key="NSNextKeyView" ref="443097978"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -206,7 +206,7 @@
 						<string key="NSFrameSize">{254, 74}</string>
 						<reference key="NSSuperview" ref="734300500"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="443097978"/>
+						<reference key="NSNextKeyView" ref="1022562948"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="660290682"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -286,6 +286,14 @@
 						<reference key="destination" ref="1022562948"/>
 					</object>
 					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">priceLabelImage</string>
+						<reference key="source" ref="734300500"/>
+						<reference key="destination" ref="459224144"/>
+					</object>
+					<int key="connectionID">22</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -379,7 +387,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -396,16 +404,11 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="didBackButtonClicked:">id</string>
-						<string key="didContinueButtonClicked:">id</string>
 						<string key="didStoreButtonClicked:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="didBackButtonClicked:">
 							<string key="name">didBackButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="didContinueButtonClicked:">
-							<string key="name">didContinueButtonClicked:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="didStoreButtonClicked:">
@@ -417,9 +420,8 @@
 						<string key="backButton">UIButton</string>
 						<string key="backgroundView">UIView</string>
 						<string key="bottomImage">UIImageView</string>
-						<string key="continueButton">UIButton</string>
 						<string key="starIcon">UIImageView</string>
-						<string key="starNumLabel">UILabel</string>
+						<string key="starNumLabel">OutlineLabel</string>
 						<string key="storeButton">UIButton</string>
 						<string key="tableview">UITableView</string>
 					</dictionary>
@@ -436,17 +438,13 @@
 							<string key="name">bottomImage</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="continueButton">
-							<string key="name">continueButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="starIcon">
 							<string key="name">starIcon</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="starNumLabel">
 							<string key="name">starNumLabel</string>
-							<string key="candidateClassName">UILabel</string>
+							<string key="candidateClassName">OutlineLabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="storeButton">
 							<string key="name">storeButton</string>
@@ -482,6 +480,7 @@
 						<string key="equipmentImageView">UIImageView</string>
 						<string key="parentView">UIView</string>
 						<string key="priceLabel">UILabel</string>
+						<string key="priceLabelImage">UIImageView</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -505,6 +504,10 @@
 							<string key="name">priceLabel</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="priceLabelImage">
+							<string key="name">priceLabelImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="titleLabel">
 							<string key="name">titleLabel</string>
 							<string key="candidateClassName">UILabel</string>
@@ -513,6 +516,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/LockedEquipmentViewCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">OutlineLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/OutlineLabel.h</string>
 					</object>
 				</object>
 			</array>
